# scrutiny

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RUBRICS.md  fdcpa_rubric.json  pyproject.toml  response_gemma4_tx_003.json  response_oi_tx_001.json  response_oi_tx_002.json  response_oi_tx_003.json  response_oi_tx_004.json  response_oi_tx_005.json  test_e2e.py  web_app.py
src/fdcpa_audit/: evaluator.py  llm.py  models.py
src/fdcpa_audit/prompts/: evaluate_transcript.md
transcripts/: tx_001_clean.demo.json  tx_001_clean.json  tx_001_clean_meta.json  tx_001_clean_raw.md  tx_002_no_miranda.demo.json  tx_002_no_miranda.json  tx_002_no_miranda_meta.json  tx_002_no_miranda_raw.md  tx_003_voicemail.demo.json  tx_003_voicemail.json  tx_003_voicemail_meta.json  tx_003_voicemail_raw.md  tx_004_cease_desist.demo.json  tx_004_cease_desist.json  tx_004_cease_desist_meta.json  tx_004_cease_desist_raw.md  tx_005_harassment.demo.json  tx_005_harassment.json  tx_005_harassment_meta.json  tx_005_harassment_raw.md
web/: index.html
