[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrutiny"
version = "0.2.0"
description = "What your QA misses in 60 minutes, Scrutiny finds in 60 seconds. FDCPA/Reg F call transcript compliance audit."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "huggingface_hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fdcpa_audit"]
